<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="0dp"
              android:layout_weight="1"
              android:id="@+id/listView">
    </ListView>

    <TextView
        android:id="@+id/txt_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/extra_empty_hint"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/edt_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hand_write_hint"/>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_gravity="center"/>

</LinearLayout>