<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:padding="5dp">

    <TextView
        android:id="@+id/txt_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"
        android:visibility="visible"
        tools:text="第一行"
        android:layout_weight="0.5"/>

    <EditText
        android:id="@+id/edt_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:hint="@string/extension_count"
        android:inputType="number"/>

    <EditText
        android:id="@+id/edt_symbol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:focusable="false"
        android:hint="@string/extension_symbol"/>

    <EditText
        android:id="@+id/edt_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:hint="@string/extension_size"
        android:inputType="number"/>

    <ImageButton
        android:id="@+id/btn_cancel"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:background="@null"
        android:padding="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_cancel_black_48dp"/>

</LinearLayout>